[TBD-1006] Add Neo4j label on tNeo4JOutput.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutput/tNeo4jOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutput/tNeo4jOutput_messages.properties
@@ -32,3 +32,6 @@ ARRAYS_MAPPED_MEMORY.NAME=Arrays store mapped memory
 CONNECTION_GROUP.NAME=Connection
 BATCH_OPTION.NAME=Batch
 NB_LINE.NAME=Number of lines
+
+USE_LABEL.NAME=Use label (Neo4j > 2.0)
+LABEL_NAME.NAME=Label name
