--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
@@ -79,6 +79,7 @@ HBASE_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0 (HBase 0.94.18)
 HBASE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
 HBASE_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
 HBASE_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
+HBASE_VERSION.ITEM.Cloudera_CDH5_1_MR1=Cloudera CDH5.1(MR 1 mode)
 HBASE_VERSION.ITEM.Cloudera_CDH5_1=Cloudera CDH5.1(YARN mode)
 HBASE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3 (Deprecated)
 HBASE_VERSION.ITEM.MAPR2=MapR 2.0.0
