--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages.properties
@@ -130,6 +130,7 @@ DB_VERSION.ITEM.HDP_2_1=Hortonworks Data Platform V2.1.0(Baikal)
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
 DB_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
 DB_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
+DB_VERSION.ITEM.Cloudera_CDH5_1_MR1=Cloudera CDH5.1(MR 1 mode)
 DB_VERSION.ITEM.Cloudera_CDH5_1=Cloudera CDH5.1(YARN mode)
 DB_VERSION.ITEM.APACHE_2_4_0_EMR=Apache 2.4.0
 
