--- a/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
+++ b/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
@@ -202,15 +202,15 @@
          point="org.talend.core.runtime.classloader_provider">
       <classloader
             index="MAP_REDUCE:HORTONWORKS:HDP_1_0"
-            libraries="hadoop-core-1.0.3.jar;commons-logging-1.1.1;commons-cli-1.2.jar;commons-configuration-1.6.jar;commons-lang-2.4.jar;commons-codec-1.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;log4j-1.2.16.jar">
+            libraries="hadoop-core-1.0.3.jar;commons-logging-1.1.1.jar;commons-cli-1.2.jar;commons-configuration-1.6.jar;commons-lang-2.4.jar;commons-codec-1.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;log4j-1.2.16.jar">
       </classloader>
       <classloader
             index="MAP_REDUCE:HORTONWORKS:HDP_1_2"
-            libraries="hadoop-core-1.1.2.21.jar;commons-logging-1.1.1;commons-cli-1.2.jar;commons-configuration-1.6.jar;commons-lang-2.4.jar;commons-codec-1.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;log4j-1.2.16.jar">
+            libraries="hadoop-core-1.1.2.21.jar;commons-logging-1.1.1.jar;commons-cli-1.2.jar;commons-configuration-1.6.jar;commons-lang-2.4.jar;commons-codec-1.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;log4j-1.2.16.jar">
       </classloader>
       <classloader
             index="MAP_REDUCE:HORTONWORKS:HDP_1_3"
-            libraries="hadoop-core-1.2.0.1.3.0.0-107.jar;commons-logging-1.1.1;commons-cli-1.2.jar;commons-configuration-1.6.jar;commons-lang-2.4.jar;commons-codec-1.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;log4j-1.2.16.jar">
+            libraries="hadoop-core-1.2.0.1.3.0.0-107.jar;commons-logging-1.1.1.jar;commons-cli-1.2.jar;commons-configuration-1.6.jar;commons-lang-2.4.jar;commons-codec-1.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;log4j-1.2.16.jar">
       </classloader>
       <classloader
             index="MAP_REDUCE:HORTONWORKS:HDP_2_0"
@@ -274,11 +274,11 @@
       </classloader>
       <classloader
             index="MAP_REDUCE:APACHE:APACHE_1_0_0"
-            libraries="hadoop-core-1.0.0.jar;commons-logging-1.1.1;commons-cli-1.2.jar;commons-configuration-1.6.jar;commons-lang-2.4.jar;commons-codec-1.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;log4j-1.2.16.jar">
+            libraries="hadoop-core-1.0.0.jar;commons-logging-1.1.1.jar;commons-cli-1.2.jar;commons-configuration-1.6.jar;commons-lang-2.4.jar;commons-codec-1.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;log4j-1.2.16.jar">
       </classloader>
       <classloader
             index="MAP_REDUCE:AMAZON_EMR:APACHE_1_0_3_EMR"
-            libraries="hadoop-core-1.0.3.jar;commons-logging-1.1.1;commons-cli-1.2.jar;commons-configuration-1.6.jar;commons-lang-2.4.jar;commons-codec-1.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;log4j-1.2.16.jar">
+            libraries="hadoop-core-1.0.3.jar;commons-logging-1.1.1.jar;commons-cli-1.2.jar;commons-configuration-1.6.jar;commons-lang-2.4.jar;commons-codec-1.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;log4j-1.2.16.jar">
       </classloader>
       <classloader
             index="MAP_REDUCE:AMAZON_EMR:APACHE_2_4_0_EMR"
