TBD-1104 : support mr 1 for CDH5.1 on DI Studio wizard

--- a/main/plugins/org.talend.repository.hadoopcluster/plugin.xml
+++ b/main/plugins/org.talend.repository.hadoopcluster/plugin.xml
@@ -37,6 +37,7 @@
             key="repository.metadata.hadoopCluster"
             label="%hadoopCluster"
             ordinal="50"
+            parentNodeType="METADATA"
             products="DI"
             type="HADOOPCLUSTER">
       </repositoryNode>
