--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -17,6 +17,7 @@ PASSWORD_FILE.NAME=File path
 PASSWORD.NAME=Password
 DRIVER_JAR.NAME=Driver JAR
 DRIVER_JAR.ITEM.JAR_NAME=Jar name
+DRIVER_CLASS.NAME=Class name
 
 USE_COLUMNS.NAME=Specify Columns
 COLUMNS.NAME=Columns
