[TBD-1112] Fix dependency problem on tNeo4jInput Fix scope problem on variables on tNeo4JOutputRelationship Add properties.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutput/tNeo4jOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutput/tNeo4jOutput_messages.properties
@@ -35,3 +35,7 @@ NB_LINE.NAME=Number of lines
 
 USE_LABEL.NAME=Use label (Neo4j > 2.0)
 LABEL_NAME.NAME=Label name
+
+DB_VERSION.NAME=DB Version
+DB_VERSION.ITEM.NEO4J_1_X_X=Neo4J 1.X.X
+DB_VERSION.ITEM.NEO4J_2_1_X=Neo4J 2.X.X
