--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutputRelationship/tNeo4jOutputRelationship_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutputRelationship/tNeo4jOutputRelationship_messages.properties
@@ -39,3 +39,7 @@ CONNECTION_GROUP.NAME=Connection
 BATCH_OPTION.NAME=Batch
 CONNECTION_GROUP.NAME=Connection
 NB_LINE.NAME=Number of lines
+
+DB_VERSION.NAME=DB Version
+DB_VERSION.ITEM.NEO4J_1_X_X=Neo4J 1.X.X
+DB_VERSION.ITEM.NEO4J_2_1_X=Neo4J 2.X.X
