TBD-878: Add a variable to store the Sqoop exit value in the globalMap

--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages.properties
@@ -179,3 +179,5 @@ HADOOP_USER.NAME=Hadoop user name
 CROSS_PLATFORM_SUBMISSION.NAME=Activate the cross platform application submission
 
 DIE_ON_ERROR.NAME=Die on error
+
+EXIT_CODE.NAME=Exit code
