--- a/main/plugins/org.talend.repository.nosql/plugin.xml
+++ b/main/plugins/org.talend.repository.nosql/plugin.xml
@@ -163,6 +163,7 @@
             dbDNDProvider="org.talend.repository.nosql.db.provider.neo4j.Neo4jDNDProvider"
             dbMetadataProvider="org.talend.repository.nosql.db.provider.neo4j.Neo4jMetadataProvider"
             dbType="NEO4J"
+            dbVersions="Neo4J_1_X_X;Neo4J_2_X_X;"
             dbWizPageProvider="org.talend.repository.nosql.db.provider.neo4j.Neo4jWizardPageProvider"
             description="Neo4j">
       </factory>
