[TBD-908] Allow the user to select the HBase version for custom Hbase.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseInput/tHBaseInput_messages.properties
@@ -92,3 +92,7 @@ DEFINE_ROW_SELECTION.NAME=Define a row selection
 ROW_SELECTION.NAME=Row selection
 START_ROW.NAME=Start Row
 END_ROW.NAME=End Row
+
+HADOOP_CUSTOM_VERSION.NAME=Hadoop version of the distribution
+HADOOP_CUSTOM_VERSION.ITEM.HADOOP_1=Hadoop 1
+HADOOP_CUSTOM_VERSION.ITEM.HADOOP_2=Hadoop 2
