--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
@@ -52,3 +52,8 @@ HBASE_VERSION.ITEM.PIVOTAL_HD_1_0_1=Pivotal HD 1.0.1
 HBASE_VERSION.ITEM.PIVOTAL_HD_2_0=Pivotal HD 2.0
 
 CUSTOM_COMMON_SETTINGS.NAME=Custom common settings
+
+HADOOP_CUSTOM_VERSION.NAME=Hadoop version of the distribution
+HADOOP_CUSTOM_VERSION.ITEM.HADOOP_1=Hadoop 1
+HADOOP_CUSTOM_VERSION.ITEM.HADOOP_2=Hadoop 2
+
