--- a/main/plugins/org.talend.rcp.branding.tos.bigdata/about.properties
+++ b/main/plugins/org.talend.rcp.branding.tos.bigdata/about.properties
@@ -4,7 +4,7 @@
 # fill-ins are supplied by about.mappings
 # This file should be translated.
 
-blurb=Talend Open Studio\n\
+blurb=Talend Open Studio for Big Data\n\
 \n\
 Version: {featureVersion}\n\
 Build id: {0}\n\
