Add support for Kafka and HBase

--- a/main/plugins/org.talend.designer.components.bigdata/components/tSparkLoad/tSparkLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSparkLoad/tSparkLoad_messages.properties
@@ -22,6 +22,8 @@ STORAGE_SOURCE.ITEM.LOCAL=Local
 STORAGE_SOURCE.ITEM.HDFS=HDFS
 STORAGE_SOURCE.ITEM.CUSTOM=Custom (Not supported)
 STORAGE_SOURCE.ITEM.TWITTER=Twitter feed
+STORAGE_SOURCE.ITEM.KAFKA=Kafka message
+STORAGE_SOURCE.ITEM.HBASE=HBase message
 
 
 TWITTER_CONFIGURATION.NAME=Twitter configuration
@@ -42,3 +44,18 @@ MAPPING.ITEM.TWITTER_PROPERTY.ITEM.DATE=Creation date
 MAPPING.ITEM.TWITTER_PROPERTY.ITEM.GEOLOCATION_LATITUDE=Geolocation latitude
 MAPPING.ITEM.TWITTER_PROPERTY.ITEM.GEOLOCATION_LONGITUDE=Geolocation longitude
 MAPPING.ITEM.TWITTER_PROPERTY.ITEM.HASHTAG=Hashtags
+
+KAFKA_CONFIGURATION.NAME=Kafka configuration
+ZOOKEEPER_HOST_KAFKA.NAME=Zookeeper host
+ZOOKEEPER_PORT_KAFKA.NAME=Zookeeper port
+KAFKA_TOPIC.NAME=Kafka topic
+NUM_THREAD.NAME=Thread number
+CONSUMER_GROUP_NAME.NAME=Consumer group
+
+HBASE_CONFIGURATION.NAME=HBase configuration
+ZOOKEEPER_HOST_HBASE.NAME=Zookeeper host
+ZOOKEEPER_PORT_HBASE.NAME=Zookeeper port
+HBASE_TABLE.NAME=HBase table
+MAPPING.NAME=Mapping
+MAPPING.ITEM.FAMILY_COLUMN=Column family
+
