--- a/main/plugins/org.talend.designer.components.bigdata/components/tSparkStore/tSparkStore_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSparkStore/tSparkStore_messages.properties
@@ -12,9 +12,17 @@ STORAGE.NAME=Storage
 STORAGE_SOURCE.NAME=Storage target
 STORAGE_SOURCE.ITEM.LOCAL=Local
 STORAGE_SOURCE.ITEM.HDFS=HDFS
+STORAGE_SOURCE.ITEM.HBASE=HBase
 STORAGE_SOURCE.ITEM.CUSTOM=Custom (Not supported)
 
 OUTPUT_FILENAME.NAME=Result Folder URI
 FIELD_SEPARATOR_CHAR.NAME=Field separator
 
 RM_OUTPUT.NAME=Remove result directory if exists
+
+HBASE_CONFIGURATION.NAME=HBase configuration
+ZOOKEEPER_HOST_HBASE.NAME=Zookeeper host
+ZOOKEEPER_PORT_HBASE.NAME=Zookeeper port
+HBASE_TABLE.NAME=HBase table
+MAPPING.NAME=Mapping
+MAPPING.ITEM.FAMILY_COLUMN=Column familys
