--- a/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
+++ b/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
@@ -120,11 +120,11 @@
       </classloader>
       <classloader
             index="HDFS:CLOUDERA:Cloudera_CDH5_1?USE_KRB"
-            libraries="avro-1.7.5-cdh5.1.2.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;guava-11.0.2.jar;hadoop-auth-2.3.0-cdh5.1.2.jar;hadoop-common-2.3.0-cdh5.1.2.jar;hadoop-hdfs-2.3.0-cdh5.1.2.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;hadoop-conf-kerberos.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar;commons-io-2.4.jar">
+            libraries="avro-1.7.5-cdh5.1.2.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;guava-11.0.2.jar;hadoop-auth-2.3.0-cdh5.1.2.jar;hadoop-common-2.3.0-cdh5.1.2.jar;hadoop-hdfs-2.3.0-cdh5.1.2.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;hadoop-conf-kerberos.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar;commons-io-2.4.jar;commons-configuration-1.6.jar">
       </classloader>
       <classloader
             index="HDFS:CLOUDERA:Cloudera_CDH5_1_MR1?USE_KRB"
-            libraries="avro-1.7.5-cdh5.1.2.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;guava-11.0.2.jar;hadoop-auth-2.3.0-cdh5.1.2.jar;hadoop-common-2.3.0-cdh5.1.2.jar;hadoop-hdfs-2.3.0-cdh5.1.2.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;commons-configuration-1.6.jar;jetty-util-6.1.26.jar;hadoop-conf-kerberos.jar">
+            libraries="avro-1.7.5-cdh5.1.2.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;guava-11.0.2.jar;hadoop-auth-2.3.0-cdh5.1.2.jar;hadoop-common-2.3.0-cdh5.1.2.jar;hadoop-hdfs-2.3.0-cdh5.1.2.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;hadoop-conf-kerberos.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar;commons-io-2.4.jar;commons-configuration-1.6.jar">
       </classloader>
       <classloader
             index="HDFS:AMAZON_EMR:MapR_EMR"
