--- a/main/plugins/org.talend.designer.components.bigdata/components/tHCatalogInput/tHCatalogInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHCatalogInput/tHCatalogInput_messages.properties
@@ -41,6 +41,8 @@ DATABASE_NAME.NAME=Database
 TABLE_NAME.NAME=Table
 PARTITION_NAME.NAME=Partition
 USERNAME.NAME=Username
+FILE_LOCATION.NAME=File location
+
 
 HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties 
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
