--- a/main/plugins/org.talend.designer.components.bigdata/components/tSparkLoad/tSparkLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSparkLoad/tSparkLoad_messages.properties
@@ -57,5 +57,10 @@ ZOOKEEPER_HOST_HBASE.NAME=Zookeeper host
 ZOOKEEPER_PORT_HBASE.NAME=Zookeeper port
 HBASE_TABLE.NAME=HBase table
 MAPPING.NAME=Mapping
+MAPPING.ITEM.HBASE_COLUMN=HBase column
 MAPPING.ITEM.FAMILY_COLUMN=Column family
+
+HBASE_PARAMETERS.NAME=Properties
+HBASE_PARAMETERS.ITEM.PROPERTY=Property
+HBASE_PARAMETERS.ITEM.VALUE=Value
 
