[TBD-1210] tSparkLog : Add note to mention no parameter

--- a/main/plugins/org.talend.designer.components.bigdata/components/tSparkLog/tSparkLog_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSparkLog/tSparkLog_messages.properties
@@ -5,3 +5,5 @@ SPARK.NAME=Spark Connection
 
 SPARKCOMBINE.LINK=Spark
 SPARKCOMBINE.MENU=Spark Combine
+
+NOTE_NO_PARAMETER.NAME=This component does not require any setup.
