TDI-31217 fixed: Define the Spark driver host option

--- a/main/plugins/org.talend.designer.components.bigdata/components/tSparkConnection/tSparkConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSparkConnection/tSparkConnection_messages.properties
@@ -25,6 +25,9 @@ SPARK_VERSION.ITEM.Cloudera_CDH51=Cloudera CDH5.1.X
 SPARK_VERSION.ITEM.MAPR_401=MapR 4.0.1
 SPARK_VERSION.ITEM.HDP_21=Hortonworks Data Platform 2.1
 
+DEFINE_SPARK_DRIVER_HOST.NAME=Define the driver hostname or IP address
+SPARK_DRIVER_HOST.NAME=
+
 STREAMING.NAME=Execute this job as a streaming application.
 
 STREAMING_CONF.NAME=Streaming
