[TBD-1162] Fix CDH 5.1 parquet dependencies on tPigLoad and tPigStoreResult.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -120,3 +120,5 @@ HBASE_CONFIGURATION.NAME=Hbase Configuration
 KEYCOLUMN.NAME=Key Column
 VALUECOLUMN.NAME=Value Column
 SEQUENCE_CONFIGURATION.NAME = Sequence Storage Configuration
+
+ASSOCIATED_PIG_LOAD.NAME =Associated tPigLoad component
