Spark: Fix an issue related to twitter and manage hbase exceptions

--- a/main/plugins/org.talend.designer.components.bigdata/components/tSparkLoad/tSparkLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSparkLoad/tSparkLoad_messages.properties
@@ -56,9 +56,9 @@ HBASE_CONFIGURATION.NAME=HBase configuration
 ZOOKEEPER_HOST_HBASE.NAME=Zookeeper host
 ZOOKEEPER_PORT_HBASE.NAME=Zookeeper port
 HBASE_TABLE.NAME=HBase table
-MAPPING.NAME=Mapping
-MAPPING.ITEM.HBASE_COLUMN=HBase column
-MAPPING.ITEM.FAMILY_COLUMN=Column family
+MAPPING_HBASE.NAME=Mapping
+MAPPING_HBASE.ITEM.HBASE_COLUMN=HBase column
+MAPPING_HBASE.ITEM.FAMILY_COLUMN=Column family
 
 HBASE_PARAMETERS.NAME=Properties
 HBASE_PARAMETERS.ITEM.PROPERTY=Property
