--- a/main/plugins/org.talend.repository.nosql/plugin.xml
+++ b/main/plugins/org.talend.repository.nosql/plugin.xml
@@ -147,7 +147,7 @@
             dbDNDProvider="org.talend.repository.nosql.db.provider.mongodb.MongoDBDNDProvider"
             dbMetadataProvider="org.talend.repository.nosql.db.provider.mongodb.MongoDBMetadataProvider"
             dbType="MONGODB"
-            dbVersions="MONGODB_2_1_2;MONGODB_2_2_3;MONGODB_2_4_X;MONGODB_2_5_X;MONGODB_2_6_X;"
+            dbVersions="MONGODB_2_6_X;MONGODB_2_5_X;MONGODB_2_4_X;MONGODB_2_2_3;MONGODB_2_1_2"
             dbWizPageProvider="org.talend.repository.nosql.db.provider.mongodb.MongoDBWizardPageProvider"
             description="MongoDB">
       </factory>
@@ -155,7 +155,7 @@
             dbDNDProvider="org.talend.repository.nosql.db.provider.cassandra.CassandraDNDProvider"
             dbMetadataProvider="org.talend.repository.nosql.db.provider.cassandra.CassandraMetadataProvider"
             dbType="CASSANDRA"
-            dbVersions="CASSANDRA_1_1_2;CASSANDRA_1_2_2;CASSANDRA_2_0_0;"
+            dbVersions="CASSANDRA_2_0_0;CASSANDRA_1_2_2;CASSANDRA_1_1_2"
             dbWizPageProvider="org.talend.repository.nosql.db.provider.cassandra.CassandraWizardPageProvider"
             description="Cassandra">
       </factory>
@@ -163,7 +163,7 @@
             dbDNDProvider="org.talend.repository.nosql.db.provider.neo4j.Neo4jDNDProvider"
             dbMetadataProvider="org.talend.repository.nosql.db.provider.neo4j.Neo4jMetadataProvider"
             dbType="NEO4J"
-            dbVersions="NEO4J_1_X_X;NEO4J_2_1_X;"
+            dbVersions="NEO4J_2_1_X;NEO4J_1_X_X"
             dbWizPageProvider="org.talend.repository.nosql.db.provider.neo4j.Neo4jWizardPageProvider"
             description="Neo4j">
       </factory>
@@ -192,7 +192,7 @@
       </classloader>
       <classloader
             index="NOSQL:CASSANDRA:CASSANDRA_1_1_2"
-            libraries="cassandra-driver-core-2.0.3.jar;guava-13.0.1.jar;log4j-1.2.16.jar;metrics-core-3.0.2.jar;netty-3.6.6.Final.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;">
+            libraries="hector-core-1.1-4.jar;apache-cassandra-1.1.2.jar;apache-cassandra-thrift-1.1.2.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;log4j-1.2.16.jar;libthrift-0.7.0.jar;guava-12.0.1.jar;commons-lang-2.6.jar;uuid-3.4.jar;">
       </classloader>
       <classloader
             index="NOSQL:CASSANDRA:CASSANDRA_1_2_2"
