TBD-1304 fix bug: Cannot retrieve avro schema successfully https://jira.talendforge.org/browse/TBD-1304

--- a/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
+++ b/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
@@ -72,11 +72,11 @@
       </classloader>
       <classloader
             index="HDFS:CLOUDERA:Cloudera_CDH5_1"
-            libraries="avro-1.7.5-cdh5.1.2.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;guava-11.0.2.jar;hadoop-auth-2.3.0-cdh5.1.2.jar;hadoop-common-2.3.0-cdh5.1.2.jar;hadoop-hdfs-2.3.0-cdh5.1.2.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;commons-configuration-1.6.jar;jetty-util-6.1.26.jar;jersey-core-1.9.jar">
+            libraries="avro-1.7.5-cdh5.1.2.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;guava-11.0.2.jar;hadoop-auth-2.3.0-cdh5.1.2.jar;hadoop-common-2.3.0-cdh5.1.2.jar;hadoop-hdfs-2.3.0-cdh5.1.2.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;commons-configuration-1.6.jar;jetty-util-6.1.26.jar;jersey-core-1.9.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
       </classloader>
       <classloader
             index="HDFS:CLOUDERA:Cloudera_CDH5_1_MR1"
-            libraries="avro-1.7.5-cdh5.1.2.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;guava-11.0.2.jar;hadoop-auth-2.3.0-cdh5.1.2.jar;hadoop-common-2.3.0-cdh5.1.2.jar;hadoop-hdfs-2.3.0-cdh5.1.2.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;commons-configuration-1.6.jar;jetty-util-6.1.26.jar;jersey-core-1.9.jar">
+            libraries="avro-1.7.5-cdh5.1.2.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;guava-11.0.2.jar;hadoop-auth-2.3.0-cdh5.1.2.jar;hadoop-common-2.3.0-cdh5.1.2.jar;hadoop-hdfs-2.3.0-cdh5.1.2.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;commons-configuration-1.6.jar;jetty-util-6.1.26.jar;jersey-core-1.9.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
       </classloader>
       <classloader
             index="HDFS:MAPR:MAPR1"
@@ -116,15 +116,15 @@
       </classloader>
       <classloader
             index="HDFS:CLOUDERA:Cloudera_CDH5?USE_KRB"
-            libraries="hadoop-hdfs-2.3.0-cdh5.0.0.jar;hadoop-common-2.3.0-cdh5.0.0.jar;hadoop-auth-2.3.0-cdh5.0.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;avro-1.7.5-cdh5.0.0.jar;log4j-1.2.17.jar;hadoop-conf-kerberos.jar;jetty-util-6.1.26.jar;jersey-core-1.9.jar;commons-io-2.4.jar">
+            libraries="hadoop-hdfs-2.3.0-cdh5.0.0.jar;hadoop-common-2.3.0-cdh5.0.0.jar;hadoop-auth-2.3.0-cdh5.0.0.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-collections-3.2.1.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;avro-1.7.5-cdh5.0.0.jar;log4j-1.2.17.jar;hadoop-conf-kerberos.jar;jetty-util-6.1.26.jar;jersey-core-1.9.jar;commons-io-2.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
       </classloader>
       <classloader
             index="HDFS:CLOUDERA:Cloudera_CDH5_1?USE_KRB"
-            libraries="avro-1.7.5-cdh5.1.2.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;guava-11.0.2.jar;hadoop-auth-2.3.0-cdh5.1.2.jar;hadoop-common-2.3.0-cdh5.1.2.jar;hadoop-hdfs-2.3.0-cdh5.1.2.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;hadoop-conf-kerberos.jar;jetty-util-6.1.26.jar;jersey-core-1.9.jar;commons-configuration-1.6.jar">
+            libraries="avro-1.7.5-cdh5.1.2.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;guava-11.0.2.jar;hadoop-auth-2.3.0-cdh5.1.2.jar;hadoop-common-2.3.0-cdh5.1.2.jar;hadoop-hdfs-2.3.0-cdh5.1.2.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;hadoop-conf-kerberos.jar;jetty-util-6.1.26.jar;jersey-core-1.9.jar;commons-configuration-1.6.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
       </classloader>
       <classloader
             index="HDFS:CLOUDERA:Cloudera_CDH5_1_MR1?USE_KRB"
-            libraries="avro-1.7.5-cdh5.1.2.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;guava-11.0.2.jar;hadoop-auth-2.3.0-cdh5.1.2.jar;hadoop-common-2.3.0-cdh5.1.2.jar;hadoop-hdfs-2.3.0-cdh5.1.2.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;hadoop-conf-kerberos.jar;jetty-util-6.1.26.jar;jersey-core-1.9.jar;commons-configuration-1.6.jar">
+            libraries="avro-1.7.5-cdh5.1.2.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;guava-11.0.2.jar;hadoop-auth-2.3.0-cdh5.1.2.jar;hadoop-common-2.3.0-cdh5.1.2.jar;hadoop-hdfs-2.3.0-cdh5.1.2.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;hadoop-conf-kerberos.jar;jetty-util-6.1.26.jar;jersey-core-1.9.jar;commons-configuration-1.6.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
       </classloader>
       <classloader
             index="HDFS:AMAZON_EMR:MapR_EMR"
@@ -152,11 +152,11 @@
       </classloader>
       <classloader
             index="HDFS:PIVOTAL_HD:PIVOTAL_HD_2_0"
-            libraries="hadoop-hdfs-2.2.0-gphd-3.0.0.0.jar;hadoop-common-2.2.0-gphd-3.0.0.0.jar;hadoop-auth-2.2.0-gphd-3.0.0.0.jar;commons-configuration-1.6.jar;commons-lang-2.5.jar;commons-logging-1.1.1.jar;commons-cli-1.2.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;avro-1.5.4.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar;commons-io-2.4.jar;log4j-1.2.17.jar">
+            libraries="hadoop-hdfs-2.2.0-gphd-3.0.0.0.jar;hadoop-common-2.2.0-gphd-3.0.0.0.jar;hadoop-auth-2.2.0-gphd-3.0.0.0.jar;commons-configuration-1.6.jar;commons-lang-2.5.jar;commons-logging-1.1.1.jar;commons-cli-1.2.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;avro-1.5.4.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar;commons-io-2.4.jar;log4j-1.2.17.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
       </classloader>
       <classloader
             index="HDFS:PIVOTAL_HD:PIVOTAL_HD_2_0?USE_KRB"
-            libraries="hadoop-hdfs-2.2.0-gphd-3.0.0.0.jar;hadoop-common-2.2.0-gphd-3.0.0.0.jar;hadoop-auth-2.2.0-gphd-3.0.0.0.jar;commons-configuration-1.6.jar;commons-lang-2.5.jar;commons-logging-1.1.1.jar;commons-cli-1.2.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;avro-1.5.4.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar;commons-io-2.4.jar;hadoop-conf-kerberos.jar;log4j-1.2.17.jar">
+            libraries="hadoop-hdfs-2.2.0-gphd-3.0.0.0.jar;hadoop-common-2.2.0-gphd-3.0.0.0.jar;hadoop-auth-2.2.0-gphd-3.0.0.0.jar;commons-configuration-1.6.jar;commons-lang-2.5.jar;commons-logging-1.1.1.jar;commons-cli-1.2.jar;guava-11.0.2.jar;protobuf-java-2.5.0.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;avro-1.5.4.jar;jetty-util-6.1.26.jar;jersey-core-1.8.jar;commons-io-2.4.jar;hadoop-conf-kerberos.jar;log4j-1.2.17.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
       </classloader>
       <classloader
             index="HDFS:MAPR:MAPR212"
@@ -176,7 +176,7 @@
       </classloader>
       <classloader
             index="HDFS:MAPR:MAPR401"
-            libraries="maprfs-4.0.1-mapr.jar;hadoop-auth-2.4.1-mapr-1408.jar;hadoop-common-2.4.1-mapr-1408.jar;zookeeper-3.4.5-mapr-1406.jar;json-20080701.jar;guava-13.0.1.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;commons-logging-1.1.3.jar;commons-collections-3.2.1.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;libprotodefs.jar;log4j-1.2.17.jar">
+            libraries="maprfs-4.0.1-mapr.jar;hadoop-auth-2.4.1-mapr-1408.jar;hadoop-common-2.4.1-mapr-1408.jar;zookeeper-3.4.5-mapr-1406.jar;json-20080701.jar;guava-13.0.1.jar;protobuf-java-2.5.0.jar;log4j-1.2.17.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;commons-logging-1.1.3.jar;commons-collections-3.2.1.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;libprotodefs.jar;log4j-1.2.17.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
       </classloader>
    </extension>
    <extension
