--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutput/tNeo4jOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutput/tNeo4jOutput_messages.properties
@@ -34,7 +34,7 @@ BATCH_OPTION.NAME=Batch
 NB_LINE.NAME=Number of lines
 
 USE_LABEL.NAME=Use label (Neo4j > 2.0)
-LABEL_NAME.NAME=Label name
+LABEL_NAME.NAME= 
 
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.NEO4J_1_X_X=Neo4J 1.X.X
