--- a/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
+++ b/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
@@ -80,11 +80,11 @@
       </classloader>
       <classloader
             index="HDFS:MAPR:MAPR1"
-            libraries="hadoop-0.20.2-dev-core.jar;commons-logging-1.0.4.jar;maprfs-0.1.jar;zookeeper-3.3.2.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
+            libraries="hadoop-0.20.2-dev-core.jar;commons-logging-1.0.4.jar;maprfs-0.1.jar;zookeeper-3.3.2.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;log4j-1.2.17.jar">
       </classloader>
       <classloader
             index="HDFS:MAPR:MAPR2"
-            libraries="hadoop-0.20.2-dev-core-mapr2.jar;commons-logging-1.0.4.jar;maprfs-0.1.jar;zookeeper-3.3.2.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
+            libraries="hadoop-0.20.2-dev-core-mapr2.jar;commons-logging-1.0.4.jar;maprfs-0.1.jar;zookeeper-3.3.2.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;log4j-1.2.17.jar">
       </classloader>
       <classloader
             index="HDFS:HORTONWORKS:HDP_1_0?USE_KRB"
@@ -160,19 +160,19 @@
       </classloader>
       <classloader
             index="HDFS:MAPR:MAPR212"
-            libraries="hadoop-0.20.2-dev-core-mapr212.jar;commons-logging-1.0.4.jar;maprfs-0.20.2-2.1.2.jar;maprfs-jni-0.20.2-2.1.2.jar;zookeeper-3.3.6.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
+            libraries="hadoop-0.20.2-dev-core-mapr212.jar;commons-logging-1.0.4.jar;maprfs-0.20.2-2.1.2.jar;maprfs-jni-0.20.2-2.1.2.jar;zookeeper-3.3.6.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;log4j-1.2.17.jar">
       </classloader>
       <classloader
             index="HDFS:MAPR:MAPR213"
-            libraries="hadoop-0.20.2-dev-core-mapr213.jar;commons-logging-1.0.4.jar;maprfs-1.0.3-mapr-2.1.3.2.jar;zookeeper-3.3.6.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
+            libraries="hadoop-0.20.2-dev-core-mapr213.jar;commons-logging-1.0.4.jar;maprfs-1.0.3-mapr-2.1.3.2.jar;zookeeper-3.3.6.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;log4j-1.2.17.jar">
       </classloader>
       <classloader
             index="HDFS:MAPR:MAPR301"
-            libraries="hadoop-0.20.2-dev-core-mapr301.jar;commons-logging-1.0.4.jar;maprfs-1.0.3-mapr-3.0.1.jar;zookeeper-3.3.6.jar;guava-13.0.1.jar;libprotodefs.jar;protobuf-java-2.4.1.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
+            libraries="hadoop-0.20.2-dev-core-mapr301.jar;commons-logging-1.0.4.jar;maprfs-1.0.3-mapr-3.0.1.jar;zookeeper-3.3.6.jar;guava-13.0.1.jar;libprotodefs.jar;protobuf-java-2.4.1.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;log4j-1.2.17.jar">
       </classloader>
       <classloader
             index="HDFS:MAPR:MAPR310"
-            libraries="hadoop-core-1.0.3-mapr-3.1.0.jar;hadoop-auth-1.0.3-mapr-3.1.0.jar;commons-logging-1.0.4.jar;maprfs-1.0.3-mapr-3.1.0.jar;zookeeper-3.4.5-mapr-1401.jar;guava-13.0.1.jar;libprotodefs.jar;protobuf-java-2.4.1.jar;json-20080701.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar">
+            libraries="hadoop-core-1.0.3-mapr-3.1.0.jar;hadoop-auth-1.0.3-mapr-3.1.0.jar;commons-logging-1.0.4.jar;maprfs-1.0.3-mapr-3.1.0.jar;zookeeper-3.4.5-mapr-1401.jar;guava-13.0.1.jar;libprotodefs.jar;protobuf-java-2.4.1.jar;json-20080701.jar;avro-1.5.4.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;log4j-1.2.17.jar">
       </classloader>
       <classloader
             index="HDFS:MAPR:MAPR401"
