Change license maven attachement type to txt, use qualifier

--- a/main/plugins/org.talend.rcp.branding.tos.bigdata/pom.xml
+++ b/main/plugins/org.talend.rcp.branding.tos.bigdata/pom.xml
@@ -27,7 +27,13 @@
               <artifacts>
                 <artifact>
                   <file>./resources/license.txt</file>
-                  <type>license</type>
+                  <type>txt</type>
+				  <classifier>license</classifier>
+                </artifact>
+				<artifact>
+                  <file>./resources/NOTICE.txt</file>
+                  <type>txt</type>
+				  <classifier>notice</classifier>
                 </artifact>
               </artifacts>
             </configuration>
