--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <groupId>org.talend.studio</groupId>
     <artifactId>parent-pom</artifactId>
     <version>6.0.0-SNAPSHOT</version>
+	<relativePath></relativePath>
   </parent>
   <artifactId>tbd-studio-se</artifactId>
   <packaging>pom</packaging>
