--- a/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
+++ b/main/plugins/org.talend.designer.hdfsbrowse/plugin.xml
@@ -282,7 +282,8 @@
       </classloader>
       <classloader
             index="MAP_REDUCE:MAPR:MAPR401"
-            libraries="hadoop-common-2.4.1-mapr-1408.jar;maprfs-4.0.1-mapr.jar;hadoop-auth-2.4.1-mapr-1408.jar;hadoop-hdfs-2.4.1-mapr-1408.jar;hadoop-mapreduce-client-common-2.4.1-mapr-1408.jar;hadoop-mapreduce-client-core-2.4.1-mapr-1408.jar;hadoop-mapreduce-client-jobclient-2.4.1-mapr-1408.jar;hadoop-yarn-api-2.4.1-mapr-1408.jar;hadoop-yarn-client-2.4.1-mapr-1408.jar;hadoop-yarn-common-2.4.1-mapr-1408.jar;json-20080701.jar;zookeeper-3.4.5-mapr-1406.jar;avro-1.5.4.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;guava-13.0.1.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;log4j-1.2.17.jar">
+            libraries="hadoop-common-2.4.1-mapr-1408.jar;maprfs-4.0.1-mapr.jar;hadoop-auth-2.4.1-mapr-1408.jar;hadoop-hdfs-2.4.1-mapr-1408.jar;hadoop-mapreduce-client-common-2.4.1-mapr-1408.jar;hadoop-mapreduce-client-core-2.4.1-mapr-1408.jar;hadoop-mapreduce-client-jobclient-2.4.1-mapr-1408.jar;hadoop-yarn-api-2.4.1-mapr-1408.jar;hadoop-yarn-client-2.4.1-mapr-1408.jar;hadoop-yarn-common-2.4.1-mapr-1408.jar;json-20080701.jar;zookeeper-3.4.5-mapr-1406.jar;avro-1.5.4.jar;commons-configuration-1.6.jar;commons-lang-2.6.jar;commons-logging-1.1.3.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.1.jar;guava-13.0.1.jar;protobuf-java-2.5.0.jar;slf4j-api-1.7.5.jar;slf4j-log4j12-1.7.5.jar;jackson-mapper-asl-1.8.8.jar;jackson-core-asl-1.8.8.jar;log4j-1.2.17.jar"
+            parent="HDFS:MAPR:MAPR401">
       </classloader>
       <classloader
             index="MAP_REDUCE:PIVOTAL_HD:PIVOTAL_HD_1_0_1"
