TDI-30557:backport on master:support reuse context function for NoSQL wizard.

--- a/main/plugins/org.talend.repository.nosql/plugin.xml
+++ b/main/plugins/org.talend.repository.nosql/plugin.xml
@@ -244,4 +244,10 @@
             version="5.6.0">
       </projecttask>
    </extension>
+   <extension
+         point="org.talend.core.repository.repository_context">
+      <RepositoryContext
+            class="org.talend.repository.nosql.ui.context.handler.NoSQLRepositoryContextHandler">
+      </RepositoryContext>
+   </extension>
 </plugin>
