Rename *-feature and *_feature to *.feature

--- a/pom.xml
+++ b/pom.xml
@@ -43,12 +43,12 @@
 	<module>i18n/plugins/org.talend.repository.nosql.nl</module>
     <module>i18n/plugins/org.talend.repository.oozie.nl</module>
     <module>i18n/plugins/org.talend.repository.pigudf.nl</module>
-    <module>main/features/org.talend.rcp.branding.tos.bigdata-feature</module>
-    <module>main/features/org.talend.tos.bigdata-feature</module>
-    <module>main/features/org.talend.tos.bigdata.core-feature</module>
-    <module>main/features/org.talend.tos.bigdata.designer-feature</module>
-    <module>main/features/org.talend.tos.bigdata.libraries-feature</module>
-    <module>main/features/org.talend.tos.bigdata.repository-feature</module>
+    <module>main/features/org.talend.rcp.branding.tos.bigdata.feature</module>
+    <module>main/features/org.talend.tos.bigdata.feature</module>
+    <module>main/features/org.talend.tos.bigdata.core.feature</module>
+    <module>main/features/org.talend.tos.bigdata.designer.feature</module>
+    <module>main/features/org.talend.tos.bigdata.libraries.feature</module>
+    <module>main/features/org.talend.tos.bigdata.repository.feature</module>
     <module>main/plugins/org.talend.demo.bigdata.ce</module>
     <module>main/plugins/org.talend.designer.components.bigdata</module>
     <module>main/plugins/org.talend.designer.hdfsbrowse</module>
