--- a/main/features/org.talend.tos.bigdata.libraries.feature/pom.xml
+++ b/main/features/org.talend.tos.bigdata.libraries.feature/pom.xml
@@ -8,6 +8,6 @@
     <version>6.0.0-SNAPSHOT</version>
     <relativePath>../../../</relativePath>
   </parent>
-  <artifactId>org.talend.tos.bigdata.repository_feature</artifactId>
+  <artifactId>org.talend.tos.bigdata.libraries.feature</artifactId>
   <packaging>eclipse-feature</packaging>
 </project>
