[TBD-1410] Change the properties name for the S3 connection.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tImpalaCreateTable/tImpalaCreateTable_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tImpalaCreateTable/tImpalaCreateTable_messages.properties
@@ -30,8 +30,8 @@ SET_FILE_LOCATION.NAME=Set file location
 FILE_LOCATION.NAME=URI path
 S3_LOCATION.NAME=Use S3 endpoint (External table)
 S3_BUCKET.NAME=S3 Bucket
-S3_USERNAME.NAME=S3 Username
-S3_PASSWORD.NAME=S3 Password
+S3_USERNAME.NAME=Access Key
+S3_PASSWORD.NAME=Secret Key
 
 SET_PARTITIONS.NAME=Set partitions
 STORAGE_FORMAT.NAME=Format
