--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -8,8 +8,8 @@ OUTPUT_FILENAME.NAME=Result Folder URI
 
 S3_LOCATION.NAME=Use S3 endpoint
 S3_BUCKET.NAME=S3 Bucket name and folder
-S3_USERNAME.NAME=S3 Username
-S3_PASSWORD.NAME=S3 Password
+S3_USERNAME.NAME=Access Key
+S3_PASSWORD.NAME=Secret Key
 
 FIELD_SEPARATOR_CHAR.NAME=Field separator 
 
