[TBD1410] Fix property typo.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -55,8 +55,8 @@ INPUT_FILENAME.NAME=Input file URI
 
 S3_LOCATION_LOAD.NAME=Use S3 endpoint
 S3_BUCKET_LOAD.NAME=S3 Bucket name and folder
-S3_USERNAME.NAME=Access Key
-S3_PASSWORD.NAME=Secret Key
+S3_USERNAME_LOAD.NAME=Access Key
+S3_PASSWORD_LOAD.NAME=Secret Key
 
 DATABASE_NAME.NAME=Database
 TABLE_NAME.NAME=Table
