Only deploy necessary plugins

--- a/main/plugins/org.talend.repository.hdfs/pom.xml
+++ b/main/plugins/org.talend.repository.hdfs/pom.xml
@@ -10,4 +10,18 @@
   </parent>
   <artifactId>org.talend.repository.hdfs</artifactId>
   <packaging>eclipse-plugin</packaging>
+  <build>
+	<plugins>
+	  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>default-deploy</id>
+            <phase>deploy</phase>
+          </execution>
+        </executions>
+      </plugin>
+	</plugins>
+  </build>
 </project>
