--- a/main/plugins/org.talend.rcp.branding.tos.bigdata/pom.xml
+++ b/main/plugins/org.talend.rcp.branding.tos.bigdata/pom.xml
@@ -12,6 +12,17 @@
   <packaging>eclipse-plugin</packaging>
     <build>
 	  <plugins>
+	  	<plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-deploy-plugin</artifactId>
+			<version>2.8.2</version>
+		        <executions>
+		          <execution>
+		            <id>default-deploy</id>
+		            <phase>deploy</phase>
+		          </execution>
+		        </executions>
+      		</plugin>
 		<plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
