TBD-1504: Hive with Tez https://jira.talendforge.org/browse/TBD-1504

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -168,3 +168,7 @@ REMOTE_FOLDER.NAME=Deployment Blob
 HDINSIGHT_CONF.NAME=HD Insight configuration
 HDINSIGHT_USERNAME.NAME=Username
 HDINSIGHT_PASSWORD.NAME=Password
+GROUP.NAME=Group
+EXECUTION_ENGINE.NAME=Execution engine
+EXECUTION_ENGINE.ITEM.MR=MapReduce
+EXECUTION_ENGINE.ITEM.TEZ=Tez
