--- a/main/plugins/org.talend.repository.hcatalog/pom.xml
+++ b/main/plugins/org.talend.repository.hcatalog/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.talend.studio</groupId>
     <artifactId>tbd-studio-se</artifactId>
-    <version>6.0.0-SNAPSHOT</version>
+    <version>6.0.0-M2</version>
     <relativePath>../../../</relativePath>
   </parent>
   <artifactId>org.talend.repository.hcatalog</artifactId>
