--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.talend.studio</groupId>
 		<artifactId>parent-pom</artifactId>
-		<version>6.0.0-SNAPSHOT</version>
+		<version>6.0.0-M2</version>
 		<relativePath></relativePath>
 	</parent>
 	<artifactId>tbd-studio-se</artifactId>
