TBD-1505: Hive with Pig https://jira.talendforge.org/browse/TBD-1505

--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -8,6 +8,7 @@ HCAT_CONFIGURATION.NAME=HCatalog Configuration
 MODE.NAME=Mode
 LOCAL.NAME=Local
 MAPREDUCE.NAME=Map/Reduce
+TEZ.NAME=Tez
 
 DISTRIBUTION.NAME=Distribution
 DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
