TUP-2649 new feature: Update branding plugins to use Talend Theme https://jira.talendforge.org/browse/TUP-2649
Rename plugin name, since the old plugin name can not be loaded into tis

--- a/main/plugins/org.talend.rcp.branding.tos.bigdata/plugin.xml
+++ b/main/plugins/org.talend.rcp.branding.tos.bigdata/plugin.xml
@@ -34,11 +34,11 @@
       </property>
       <property
             name="cssTheme"
-            value="org.talend.themes.talend_theme.default">
+            value="org.talend.themes.css.talend.default">
       </property>
       <property
             name="applicationCSSResources"
-            value="platform:/plugin/org.talend.themes.talend_theme/themes/">
+            value="platform:/plugin/org.talend.themes.css.talend/themes/">
       </property>
    </product>
 </extension>
