TBD-1042: Support for Cassandra CQL3 https://jira.talendforge.org/browse/TBD-1042 support datastax api on cassandra components

--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
@@ -81,4 +81,8 @@ SUPER_COLUMN_C_TYPE.ITEM.INTEGERTYPE=Integer
 SUPER_COLUMN_C_TYPE.ITEM.ASCIITYPE=Ascii
 SUPER_COLUMN_C_TYPE.ITEM.UUIDTYPE=UUID
 SUPER_COLUMN_C_TYPE.ITEM.TIMEUUIDTYPE=TimeUUID
-
+API_TYPE.NAME=API type
+API_TYPE.ITEM.HECTOR=Hector
+API_TYPE.ITEM.DATASTAX=Datastax
+QUERY.NAME=Query
+TABLE.NAME=Column family
