--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
@@ -59,3 +59,40 @@ COMPARATOR.ITEM.LONGTYPE=LongType
 COMPARATOR.ITEM.TIMEUUIDTYPE=TimeUUIDType
 COMPARATOR.ITEM.UTF8TYPE=UTF8Type
 DEFINE_CF_STRUCTS.NAME=Define column family structure
+API_TYPE.NAME=API type
+API_TYPE.ITEM.HECTOR=Hector
+API_TYPE.ITEM.DATASTAX=Datastax
+TABLE.NAME=Column family
+TABLE_ACTION.ITEM.CLEAR=Clear column family
+TABLE_ACTION.ITEM.TRUNCATE=Truncate column family
+TABLE_ACTION.ITEM.CREATE=Create column family
+TABLE_ACTION.ITEM.CREATE_IF_NOT_EXISTS=Create column family if not exists
+TABLE_ACTION.ITEM.DROP_IF_EXISTS_AND_CREATE=Drop column family if exists and create
+TABLE_ACTION.ITEM.DROP_CREATE=Drop and create column family
+TABLE_ACTION.ITEM.NONE=None
+TABLE_ACTION.NAME=Action on column family
+DATA_ACTION.ITEM.DELETE=Delete
+DATA_ACTION.ITEM.INSERT=Insert
+DATA_ACTION.ITEM.UPDATE=Update
+DATA_ACTION.NAME=Action on data
+USING_TTL.NAME=Using TTL
+TTL.NAME=
+USING_TIMESTAMP.NAME=Using TIMESTAMP
+TIMESTAMP.NAME=
+INSERT_IF_NOT_EXISTS.NAME=Insert if not exists
+IF_CONDITION.NAME=IF condition
+IF_CONDITION.ITEM.COLUMN_NAME=column
+DELETE_IF_EXISTS.NAME=Delete if exists
+ASSIGNMENT_OPERATION.NAME=Special assignment operation
+ASSIGNMENT_OPERATION.ITEM.COLUMN_NAME=update column
+ASSIGNMENT_OPERATION.ITEM.OPERATION=operation
+ASSIGNMENT_OPERATION.ITEM.KEY_COLUMN=map key/list position
+ASSIGNMENT_OPERATION.ITEM.OPERATION.ITEM.+v=append(count/set/list/map)
+ASSIGNMENT_OPERATION.ITEM.OPERATION.ITEM.v+=prepend(list)
+ASSIGNMENT_OPERATION.ITEM.OPERATION.ITEM.-=remove(count/set/list/map)
+ASSIGNMENT_OPERATION.ITEM.OPERATION.ITEM.p/k=assign based on position/key(list/map)
+ROW_KEY_IN_LIST.NAME=Row key in list
+ROW_KEY_IN_LIST.ITEM.COLUMN_NAME=key column
+DELETE_COLUMN_BY_POSITION_KEY.NAME=Delete collection column based on position/key
+DELETE_COLUMN_BY_POSITION_KEY.ITEM.COLUMN_NAME=column
+USE_UNLOGGED_BATCH.NAME=Use unlogged batch
