TDI-30557:fix some bugs.

--- a/main/plugins/org.talend.repository.nosql/plugin.xml
+++ b/main/plugins/org.talend.repository.nosql/plugin.xml
@@ -250,4 +250,11 @@
             class="org.talend.repository.nosql.ui.context.handler.NoSQLRepositoryContextHandler">
       </RepositoryContext>
    </extension>
+   <extension
+         point="org.talend.core.runtime.service">
+      <Service
+            class="org.talend.repository.nosql.ui.context.handler.NoSqlContextUpdateService"
+            serviceId="IRepositoryContextUpdateService">
+      </Service>
+   </extension>
 </plugin>
