TUP-2712 new feature:Replace the icons of the repository https://jira.talendforge.org/browse/TUP-2712

--- a/main/plugins/org.talend.rcp.branding.tos.bigdata/plugin.xml
+++ b/main/plugins/org.talend.rcp.branding.tos.bigdata/plugin.xml
@@ -88,7 +88,7 @@
                point="org.eclipse.ui.perspectives">
             <perspective
                   class="org.talend.rcp.perspective.Perspective"
-                  icon="platform:/plugin/org.talend.core/icons/process_icon.gif"
+                  icon="platform:/plugin/org.talend.core/icons/process_icon.png"
                   id="org.talend.rcp.perspective"
                   name="Integration">
             </perspective>
