TBD-1504: Hive with Tez https://jira.talendforge.org/browse/TBD-1504 1.fix bug Mapr401 can't work when tHive component with tez 2.refact how to use Tez on tHive components

--- a/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
@@ -165,3 +165,10 @@ GROUP.NAME=Group
 EXECUTION_ENGINE.NAME=Execution engine
 EXECUTION_ENGINE.ITEM.MR=MapReduce
 EXECUTION_ENGINE.ITEM.TEZ=Tez
+TEZ_LIB.NAME=Tez lib
+TEZ_LIB.ITEM.INSTALL=Auto install
+TEZ_LIB.ITEM.USE_EXIST=Use exist
+TEZ_LIB_FOLDER.NAME=Install folder in HDFS
+TEZ_LIB_NAME.NAME=Lib jars
+TEZ_LIB_NAME.ITEM.JAR_NAME=Jar name
+TEZ_LIB_PATH.NAME=Lib path(folder or file)
