--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages.properties
@@ -38,7 +38,7 @@ HIVE_VERSION.ITEM.HDP_2_1=Hortonworks Data Platform V2.1.0(Baikal)
 HIVE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203 (Hive 0.7.1)
 HIVE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Hive 0.9.0)
 HIVE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1 mode)
-HIVE_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3(YARN mode)
+HIVE_VERSION.ITEM.Cloudera_CDH4_YARN=Cloudera CDH4.3+(YARN mode)
 HIVE_VERSION.ITEM.Cloudera_CDH5=Cloudera CDH5.0(YARN mode)
 HIVE_VERSION.ITEM.Cloudera_CDH5_1_MR1=Cloudera CDH5.1(MR 1 mode)
 HIVE_VERSION.ITEM.Cloudera_CDH5_1=Cloudera CDH5.1(YARN mode)
@@ -173,3 +173,10 @@ GROUP.NAME=Group
 EXECUTION_ENGINE.NAME=Execution engine
 EXECUTION_ENGINE.ITEM.MR=MapReduce
 EXECUTION_ENGINE.ITEM.TEZ=Tez
+TEZ_LIB.NAME=Tez lib
+TEZ_LIB.ITEM.INSTALL=Auto install
+TEZ_LIB.ITEM.USE_EXIST=Use exist
+TEZ_LIB_FOLDER.NAME=Install folder in HDFS
+TEZ_LIB_NAME.NAME=Lib jars
+TEZ_LIB_NAME.ITEM.JAR_NAME=Jar name
+TEZ_LIB_PATH.NAME=Lib path(folder or file)
