[TBD-1544] tPigXXX fails when the previous subjob uses tHBaseXX.
The tHBaseXXX components didn't set the user name so the tPigXXX would
fail dur to permission issuses. The tHBaseXXX have now a field for
username when used withour Kerberos and get their username from the
existing connection if they use one.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
@@ -58,6 +58,7 @@ HADOOP_CUSTOM_VERSION.NAME=Hadoop version of the distribution
 HADOOP_CUSTOM_VERSION.ITEM.HADOOP_1=Hadoop 1
 HADOOP_CUSTOM_VERSION.ITEM.HADOOP_2=Hadoop 2
 
+USERNAME.NAME=Username
 USE_KRB.NAME=Use kerberos authentication
 USE_KEYTAB.NAME=Use a keytab to authenticate
 PRINCIPAL.NAME=Principal
