[TBD-1572] Added HBase Kerberos support to tPigLoad.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -110,6 +110,8 @@ NAMENODE_PRINCIPAL.NAME=Namenode principal
 JOBTRACKER_PRINCIPAL.NAME=JobTracker principal
 RESOURCEMANAGER_PRINCIPAL.NAME=Resource manager principal
 JOBHISTORY_PRINCIPAL.NAME=Job history principal
+HBASEMASTER_PRINCIPAL=HBase Master principal
+HBASEREIGONSERVER_PRINCIPAL=HBase Reigon server principal
 USE_KEYTAB.NAME=Use a keytab to authenticate
 PRINCIPAL.NAME=Principal
 KEYTAB_PATH.NAME=Keytab
