[TBD-1572] Added Kerberos support to tHiveInput when used with HBase Store

--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -99,6 +99,9 @@ ZOOKEEPER_CLIENT_PORT.NAME=Zookeeper client port
 SET_ZNODE_PARENT.NAME=Set zookeeper znode parent
 ZNODE_PARENT.NAME=
 
+HBASE_MASTER_PRINCIPAL.NAME=HBase master principal
+HBASE_REIGONSERVER_PRINCIPAL.NAME=HBase reigonserver principal
+
 REGISTER_JAR.NAME=Register jar for HBase
 REGISTER_JAR.ITEM.JAR_NAME=Jar name
 REGISTER_JAR.ITEM.JAR_PATH=Jar path
