TBD-1042: Support for Cassandra CQL3 https://jira.talendforge.org/browse/TBD-1042 add keyspace for tCassandraInput/Output/Row fix bug about primitive type fix bug about byte[] add nb_line fix the bug about multiple lines in Query ignore keyword

--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
@@ -18,6 +18,7 @@ KEY_COLUMN.NAME=Row key column
 COLUMN_END.NAME=Columns range end
 KEY_END.NAME=Key end
 KEY_SPACE.NAME=Keyspace
+KEY_SPACE_DATASTAX.NAME=Keyspace
 COLUMN_START.NAME=Columns range start
 KEY_START.NAME=Key start
 KEY_LIMIT.NAME=Key limit
