--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages.properties
@@ -10,6 +10,7 @@ HOST.NAME=Host
 KEYSPACE_CONFIGURATION.NAME=Keyspace configuration
 KEY_COLUMN.NAME=Key column
 KEY_SPACE.NAME=Keyspace
+KEY_SPACE_DATASTAX.NAME=Keyspace
 LONG_NAME=Execute CQL command.
 NB_LINE.NAME=NB_LINE
 PASSWORD.NAME=Password
