--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
@@ -37,6 +37,7 @@ INC_SUPER_KEY.NAME=Include super columns in standard columns
 KEYSPACE_CONFIGURATION.NAME=Keyspace configuration
 KEY_COLUMN.NAME=Row key column
 KEY_SPACE.NAME=Keyspace
+KEY_SPACE_DATASTAX.NAME=Keyspace
 LONG_NAME=Output Data to a cassandra solution.
 NB_LINE.NAME=NB_LINE
 PASSWORD.NAME=Password
